tests/fail/redirect_conflict_capture_file.msh
# Conflict: stdout capture then file redirect must error
[ls] * `conflict_out.txt` > ;
